--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -1,18 +1,3 @@
-## Features of blocks:
-## Swaying
-##   full
-##   upper half
-##   tall
-##   horizontal only
-##   underwater upper
-##   underwater tall
-## Emissive
-## Thin translucency
-## Subsurface
-## Water
-
-block.10000 = minecraft:water
-
 ## BITS: 0000 11 22 33 4444
 # 0 sway 
 # 1 shading
@@ -150,3 +135,6 @@ block.896 = \
 # 0000 01 10 00 0000
 block.384 = \
 	small_amethyst_bud medium_amethyst_bud large_amethyst_bud amethyst_cluster
+
+## rigid, thin, none, yes, water
+block.257 = water
