--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,7 +1,7 @@
 screen=[SCREEN]
-screen.SCREEN = TAA_QUALITY RESAMPLING_QUALITY
+screen.SCREEN = TAA_QUALITY RESAMPLING_QUALITY PANINI_FAC
 
-sliders=
+sliders=PANINI_FAC
 
 separateAo = true
 oldLighting = false
