Add toggles for TAA, panini

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,5 +1,5 @@
 screen=[SCREEN]
-screen.SCREEN = TAA_QUALITY RESAMPLING_QUALITY PANINI_FAC
+screen.SCREEN = TAA_QUALITY RESAMPLING_QUALITY PANINI_ENABLE PANINI_FAC
 
 sliders=PANINI_FAC
 
