Fix redstone_wire syntax error

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -129,7 +129,7 @@ block.896 = \
 	lava conduit end_rod glowstone lava_cauldron jack_o_lantern lantern soul_lantern magma_block\
 	furnace:lit=true blast_furnace:lit=true \
 	detector_rail:powered=true powered_rail:powered=true redstone_ore:lit=true \
-	comparator:powered=true redstone_lamp:powered=true repeater:powered=true redstone_torch:lit=true redstone_wall_torch:lit=true redstone_wire:
+	comparator:powered=true repeater:powered=true redstone_lamp:lit=true redstone_torch:lit=true redstone_wall_torch:lit=true redstone_wire:lit=true
 
 ## rigid, thin, glow, yes, none
 # 0000 01 10 00 0000
