--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -129,7 +129,8 @@ block.896 = \
 	lava conduit end_rod glowstone lava_cauldron jack_o_lantern lantern soul_lantern magma_block\
 	furnace:lit=true blast_furnace:lit=true \
 	detector_rail:powered=true powered_rail:powered=true redstone_ore:lit=true \
-	comparator:powered=true redstone_lamp:powered=true repeater:powered=true redstone_torch:lit=true redstone_wall_torch:lit=true redstone_wire:
+	comparator:powered=true repeater:powered=true redstone_lamp:lit=true redstone_torch:lit=true redstone_wall_torch:lit=true \
+	redstone_wire:power=1 redstone_wire:power=2 redstone_wire:power=3 redstone_wire:power=4 redstone_wire:power=5 redstone_wire:power=6 redstone_wire:power=7 redstone_wire:power=8 redstone_wire:power=9 redstone_wire:power=10 redstone_wire:power=11 redstone_wire:power=12 redstone_wire:power=13 redstone_wire:power=14 redstone_wire:power=15
 
 ## rigid, thin, glow, yes, none
 # 0000 01 10 00 0000
